manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caf-accounts-master
spec:
  selector:
    matchLabels:
      app: caf-accounts-master
  template:
    metadata:
      labels:
        app: caf-accounts-master
    spec:
      containers:
      - name: caf-accounts-master
        image: itocafregistry.azurecr.io/caf-accounts-master
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
