manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: caf-accounts-master
    labels:
        app: caf-accounts-master
spec:
    ports:
        - name: http
          port: 80
          targetPort: 8080
    selector:
        app: caf-accounts-master
    type: ClusterIP
